updated based on comments
Signed-off-by: Savvas Kyriacou <savvasky@uk.ibm.com>